--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,27 @@
 old*/
 nppBackup*/
+#ignora archivos no deseados de proyectos MPLABX
+*.ccspjt
+build*/
+debug*/
+**/nbproject/*
+!**/nbproject/configurations.xml
+!**/nbproject/project.properties
+!**/nbproject/project.xml
+*.hex
+*.cof
+
+#ignora archivos no desados de Eagle
+*.s#*
+*.b#*
+*.l#*
+*.bbk
+*.sbk
+*.scr
+#ignora archivos de backup de Sketchup
+*.skb
+#ignora backups de notepad++
+**/nppBackup*/
+#ignora carpetas voluminosas
+**/Fotos*/
+**/Presentaciones*/
